--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "choww.github.io",
-  "version": "1.0.0",
-  "description": "My jekyll blog template.",
-  "main": "gulpfile.js",
+  "version": "2.0.0",
+  "description": "Carmen Chow - infrastructure developer",
+  "main": "gulpfile.mjs",
+  "type": "module",
   "scripts": {
-    "start": "bundle exec jekyll serve"
+    "start": "gulp"
   },
   "keywords": [
     "frontend",
     "blog",
-    "css",
-    "stylus",
     "jekyll",
-    "js"
+    "js",
+    "infrastructure",
+    "sre"
   ],
   "author": "Carmen Chow",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "autoprefixer-stylus": "^0.4.0",
-    "browser-sync": "^1.9.0",
-    "grunt": "^0.4.5",
-    "gulp": "^3.8.10",
-    "gulp-concat": "^2.4.3",
-    "gulp-imagemin": "^2.1.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-stylus": "^1.3.7",
-    "gulp-uglify": "^1.0.2"
+    "autoprefixer-stylus": "^1.0.0",
+    "browser-sync": "^2.27.7",
+    "grunt": "^1.4.1",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-stylus": "^2.7.0",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
-    "jeet": "^6.1.4",
-    "kouto-swiss": "^0.11.14",
-    "rupture": "^0.6.1"
+    "jeet": "^7.2.0",
+    "kouto-swiss": "^1.1.0",
+    "rupture": "^0.7.1"
   }
 }
