--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
 # Site settings
 title: Carmen Chow - Infrastructure Developer
-description: "A blog about lorem ipsum ..."
+description: "blog"
 baseurl: "" # for test: remove string '/space-jekyll-template' to ''
-url: "http://choww.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.github.io'
+url: ""
+# url: "https://choww.github.io"
 
 # User settings
-username: Carmen
+username: Carmen Chow
 user_title: Infrastructure Developer
 email: carmenchow@protonmail.com
-twitter_username: loremipsum
+twitter_username: chowwmein_
 github_username: choww
-linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
+linkedin_public_url: carmenchoww
 profile_picture: assets/img/avatar.jpg
 
 # Build settings
 markdown: kramdown
 highlighter: rouge
-permalink: /:title/
+permalink: /posts/:title/
 
 # html minify
 compress_html:
@@ -31,39 +32,29 @@ links:
     - title: home
       url: /
       key_trigger: 1
-    - title: my posts
+    - title: posts
       url: /posts
       key_trigger: 2
-    - title: series
-      url: /series
-      key_trigger: 3
     - title: tags
       url: /tags
-      key_trigger: 4
-    - title: about me
+      key_trigger: 3
+    - title: about
       url: /about
-      key_trigger: 5
+      key_trigger: 4
   section_2:
     - title: github
       url: http://www.github.com/choww
       new_tab: true
       key_trigger: g
     - title: twitter
-      url: http://www.twitter.com/victorvoid
+      url: http://www.twitter.com/chowwmein_
       key_trigger: t
-    - title: search
-      url: ""
-      key_trigger: s #WARNING: search only works with "s"
   # add section_<n> to add more sections
 
 # projects in header index
 projects:
-  - name: fluany
-    url: https://github.com/fluany/fluany
-  - name: vim-frontend
-    url: https://github.com/victorvoid/vim-frontend
-  - name: generator-capybara
-    url: https://github.com/victorvoid/generator-capybara
+  - name: treasury
+    url: https://github.com/choww/treasury
 
 # exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
