--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Carmen Chow - Infrastructure Developer
-description: "personal blog"
+description: "Tech blog"
 baseurl: ""
 url: "https://choww.github.io"
 
